[gd_scene load_steps=46 format=2]

[ext_resource path="res://scripts/UI/animal_stat.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/african.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/animals/goat.png" type="Texture" id=3]
[ext_resource path="res://scenes/UI/stat.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/UI/Buttons/icon_labour.png" type="Texture" id=5]
[ext_resource path="res://scripts/UI/popup_insufficient.gd" type="Script" id=6]
[ext_resource path="res://scripts/controllers/crop_handler.gd" type="Script" id=7]
[ext_resource path="res://scenes/UI/big_menu/big_menu_int_item.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/UI/Buttons/icon_measures.png" type="Texture" id=9]
[ext_resource path="res://scripts/controllers/resource_loader.gd" type="Script" id=10]
[ext_resource path="res://assets/farmzy/farmz2u character-06.png" type="Texture" id=11]
[ext_resource path="res://scripts/controllers/asset_manager.gd" type="Script" id=12]
[ext_resource path="res://scripts/controllers/state_controller.gd" type="Script" id=13]
[ext_resource path="res://scripts/UI/big_menu/big_menu_item_container.gd" type="Script" id=14]
[ext_resource path="res://scripts/UI/toggle_menu/toggle_button_container.gd" type="Script" id=15]
[ext_resource path="res://resources/animals/01_chicken.tres" type="Resource" id=16]
[ext_resource path="res://scripts/field/field.gd" type="Script" id=17]
[ext_resource path="res://scripts/UI/tooltips/tooltip.gd" type="Script" id=18]
[ext_resource path="res://resources/animals/02_goat.tres" type="Resource" id=19]
[ext_resource path="res://assets/Background1.png" type="Texture" id=20]
[ext_resource path="res://scripts/field/animals.gd" type="Script" id=21]
[ext_resource path="res://assets/UI/Buttons/icon_family.png" type="Texture" id=22]
[ext_resource path="res://assets/animals/cow.png" type="Texture" id=23]
[ext_resource path="res://scripts/UI/stat.gd" type="Script" id=24]
[ext_resource path="res://resources/animals/03_cow.tres" type="Resource" id=26]
[ext_resource path="res://scripts/UI/toggle_menu/tab_menu.gd" type="Script" id=27]
[ext_resource path="res://assets/field/field.png" type="Texture" id=28]
[ext_resource path="res://scenes/UI/tabs/ToggleButton.tscn" type="PackedScene" id=29]
[ext_resource path="res://assets/UI/Buttons/icon_seeds.png" type="Texture" id=30]
[ext_resource path="res://assets/animals/cock.png" type="Texture" id=31]
[ext_resource path="res://assets/theme/main_theme.tres" type="Theme" id=32]
[ext_resource path="res://assets/theme/buy_menu/buy_menu_item.tres" type="Theme" id=33]
[ext_resource path="res://scripts/controllers/end_of_year.gd" type="Script" id=34]
[ext_resource path="res://scripts/UI/tooltips/max_width_text.gd" type="Script" id=35]
[ext_resource path="res://resources/labour/labourer.tres" type="Resource" id=36]
[ext_resource path="res://scripts/UI/tooltips/big_menu_tooltip.gd" type="Script" id=37]
[ext_resource path="res://scripts/resources/summaries/field_summary_resource.gd" type="Script" id=38]
[ext_resource path="res://scripts/UI/toggle_menu/BuyMenu/buy_menu_item_container.gd" type="Script" id=39]
[ext_resource path="res://scripts/UI/popup_max_reached.gd" type="Script" id=40]
[ext_resource path="res://resources/start_fertility.tres" type="Resource" id=41]
[ext_resource path="res://scripts/controllers/measures_handler.gd" type="Script" id=46]

[sub_resource type="Resource" id=4]
script = ExtResource( 38 )
crop_summary = {
}

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.780392, 0, 0, 0.592157 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.615686, 0.501961, 0.227451, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="ResourceLoader" type="Node"]
script = ExtResource( 10 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
input_pass_on_modal_close_click = false
texture = ExtResource( 20 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animals" type="YSort" parent="."]
position = Vector2( 341, 381 )
script = ExtResource( 21 )

[node name="Hill" type="Sprite" parent="."]
position = Vector2( 534, 411 )
scale = Vector2( 0.339849, 0.29375 )
texture = ExtResource( 28 )

[node name="Field" type="YSort" parent="."]
position = Vector2( 580, 510 )
script = ExtResource( 17 )
summary = SubResource( 4 )
field_resource = ExtResource( 41 )
state_controller_path = NodePath("../StateController")

[node name="StateController" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 32 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
crop_handler_path = NodePath("CropsMenu")

[node name="CropsMenu" type="Panel" parent="StateController"]
visible = false
anchor_right = 0.15
anchor_bottom = 0.8
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
toggle_menu_path = NodePath("CropsBuyMenu/ScrollContainer/BuyMenuItemContainer")

[node name="CropsBuyMenu" type="VBoxContainer" parent="StateController/CropsMenu"]
anchor_right = 1.0
anchor_bottom = 1.05
theme = ExtResource( 33 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="StateController/CropsMenu/CropsBuyMenu"]
margin_right = 153.0
margin_bottom = 453.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyMenuItemContainer" type="VBoxContainer" parent="StateController/CropsMenu/CropsBuyMenu/ScrollContainer"]
margin_right = 153.0
size_flags_horizontal = 15
script = ExtResource( 39 )
tooltip_path = NodePath("../../../../../Tooltips/BuyMenuTooltip")
target_path = NodePath("../../..")
my_resource_name = "crop_resource"

[node name="BackButton" type="Button" parent="StateController/CropsMenu/CropsBuyMenu"]
margin_top = 463.0
margin_right = 153.0
margin_bottom = 503.0
rect_min_size = Vector2( 0, 40 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivestockMenu" type="Panel" parent="StateController"]
visible = false
anchor_right = 0.9
anchor_bottom = 0.85
script = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="StateController/LivestockMenu"]
anchor_right = 1.0
anchor_bottom = 0.1
custom_fonts/font = SubResource( 3 )
text = "Livestock"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StateController/LivestockMenu"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}
big_menu_int_item_scene = ExtResource( 8 )
my_int_resource_name = "animal_resource"

[node name="BackButton" type="Button" parent="StateController/LivestockMenu"]
anchor_left = 0.8
anchor_top = 0.9
anchor_right = 0.95
anchor_bottom = 1.0
text = "back"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LabourMenu" type="Panel" parent="StateController"]
visible = false
anchor_right = 0.9
anchor_bottom = 0.85
script = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="StateController/LabourMenu"]
anchor_right = 1.0
anchor_bottom = 0.1
custom_fonts/font = SubResource( 3 )
text = "Labour menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StateController/LabourMenu"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="StateController/LabourMenu/VBoxContainer"]
margin_right = 737.0
margin_bottom = 94.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="StateController/LabourMenu/VBoxContainer/HBoxContainer"]
margin_top = 37.0
margin_right = 298.0
margin_bottom = 56.0
text = "Take an off-farm job"

[node name="Control" type="Control" parent="StateController/LabourMenu/VBoxContainer/HBoxContainer"]
margin_left = 302.0
margin_right = 444.0
margin_bottom = 94.0
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="StateController/LabourMenu/VBoxContainer/HBoxContainer"]
margin_left = 448.0
margin_right = 590.0
margin_bottom = 94.0
size_flags_horizontal = 3

[node name="Control2" type="Control" parent="StateController/LabourMenu/VBoxContainer/HBoxContainer"]
margin_left = 594.0
margin_right = 737.0
margin_bottom = 94.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="StateController/LabourMenu/VBoxContainer"]
margin_top = 104.0
margin_right = 737.0
margin_bottom = 199.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="StateController/LabourMenu/VBoxContainer/HBoxContainer2"]
margin_top = 38.0
margin_right = 185.0
margin_bottom = 57.0
text = "hire labourer"

[node name="HBoxContainer3" type="HBoxContainer" parent="StateController/LabourMenu/VBoxContainer"]
margin_top = 209.0
margin_right = 737.0
margin_bottom = 303.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="StateController/LabourMenu/VBoxContainer/HBoxContainer3"]
margin_top = 37.0
margin_right = 185.0
margin_bottom = 56.0
text = "hire labourer"

[node name="AnimalMenuItem" parent="StateController/LabourMenu/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 313.0
margin_bottom = 408.0
resource = ExtResource( 36 )

[node name="BackButton" type="Button" parent="StateController/LabourMenu"]
anchor_left = 0.8
anchor_top = 0.9
anchor_right = 0.95
anchor_bottom = 1.0
text = "back"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MeasuresMenu" type="Panel" parent="StateController"]
visible = false
anchor_right = 0.15
anchor_bottom = 0.8
script = ExtResource( 46 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyMenu" type="VBoxContainer" parent="StateController/MeasuresMenu"]
anchor_right = 1.0
anchor_bottom = 1.05
theme = ExtResource( 33 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="StateController/MeasuresMenu/BuyMenu"]
margin_right = 153.0
margin_bottom = 453.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyMenuItemContainer" type="VBoxContainer" parent="StateController/MeasuresMenu/BuyMenu/ScrollContainer"]
margin_right = 153.0
size_flags_horizontal = 15
script = ExtResource( 39 )
tooltip_path = NodePath("../../../../../Tooltips/BuyMenuTooltip")
target_path = NodePath("../../..")
my_resource_name = "measures_resource"

[node name="BackButton" type="Button" parent="StateController/MeasuresMenu/BuyMenu"]
margin_top = 463.0
margin_right = 153.0
margin_bottom = 503.0
rect_min_size = Vector2( 0, 40 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FamilyMenu" type="Panel" parent="StateController"]
visible = false
anchor_right = 0.9
anchor_bottom = 0.85
script = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="StateController/FamilyMenu"]
anchor_right = 1.0
anchor_bottom = 0.1
custom_fonts/font = SubResource( 3 )
text = "Labour menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StateController/FamilyMenu"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="StateController/FamilyMenu/VBoxContainer"]
margin_right = 737.0
margin_bottom = 129.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="StateController/FamilyMenu/VBoxContainer/HBoxContainer"]
margin_top = 55.0
margin_right = 185.0
margin_bottom = 74.0
text = "hire labourer"

[node name="HBoxContainer2" type="HBoxContainer" parent="StateController/FamilyMenu/VBoxContainer"]
margin_top = 139.0
margin_right = 737.0
margin_bottom = 268.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="StateController/FamilyMenu/VBoxContainer/HBoxContainer2"]
margin_top = 55.0
margin_right = 185.0
margin_bottom = 74.0
text = "hire labourer"

[node name="HBoxContainer3" type="HBoxContainer" parent="StateController/FamilyMenu/VBoxContainer"]
margin_top = 278.0
margin_right = 737.0
margin_bottom = 408.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="StateController/FamilyMenu/VBoxContainer/HBoxContainer3"]
margin_top = 55.0
margin_right = 185.0
margin_bottom = 74.0
text = "hire labourer"

[node name="BackButton" type="Button" parent="StateController/FamilyMenu"]
anchor_left = 0.8
anchor_top = 0.9
anchor_right = 0.95
anchor_bottom = 1.0
text = "back"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AssetManager" type="HBoxContainer" parent="."]
anchor_top = 0.85
anchor_right = 1.01
anchor_bottom = 1.0
theme = ExtResource( 32 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
money = 1000.0
labour = 1000.0
available_animals = [ ExtResource( 16 ), ExtResource( 19 ), ExtResource( 26 ) ]
popup_insufficient_path = NodePath("../Tooltips/PopupInsufficient")
popup_max_reached_path = NodePath("../Tooltips/PopupMaxReached")
stat_trackers = {
"labour": NodePath("LabourStat"),
"money": NodePath("MoneyStat"),
ExtResource( 19 ): NodePath("GoatStat"),
ExtResource( 26 ): NodePath("CowStat"),
ExtResource( 16 ): NodePath("ChickenStat")
}

[node name="MoneyStat" parent="AssetManager" instance=ExtResource( 4 )]
margin_right = 119.0
type = "money"
unit = "NGT"

[node name="LabourStat" type="ColorRect" parent="AssetManager"]
margin_left = 123.0
margin_right = 243.0
margin_bottom = 90.0
size_flags_horizontal = 3
color = Color( 0.713726, 0, 0, 1 )
script = ExtResource( 24 )
type = "Labour"
unit = "/7"

[node name="Title" type="Label" parent="AssetManager/LabourStat"]
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.5
text = "Money"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Amount" type="Label" parent="AssetManager/LabourStat"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.9
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YearsStat" type="ColorRect" parent="AssetManager"]
margin_left = 247.0
margin_right = 367.0
margin_bottom = 90.0
size_flags_horizontal = 3
color = Color( 0.235294, 0.341176, 0.615686, 1 )
script = ExtResource( 24 )
type = "Years"
unit = "/20"

[node name="Title" type="Label" parent="AssetManager/YearsStat"]
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.5
text = "Money"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Amount" type="Label" parent="AssetManager/YearsStat"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.9
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FertilityStat" type="ColorRect" parent="AssetManager"]
margin_left = 371.0
margin_right = 490.0
margin_bottom = 90.0
size_flags_horizontal = 3
color = Color( 0.235294, 0.341176, 0.615686, 1 )
script = ExtResource( 24 )
type = "Fertility"
unit = "%"

[node name="Title" type="Label" parent="AssetManager/FertilityStat"]
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.5
text = "fertility"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Amount" type="Label" parent="AssetManager/FertilityStat"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.9
text = "50%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChickenStat" type="TextureRect" parent="AssetManager"]
margin_left = 494.0
margin_right = 614.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 11
texture = ExtResource( 31 )
expand = true
stretch_mode = 6
script = ExtResource( 1 )

[node name="Amount" type="Label" parent="AssetManager/ChickenStat"]
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoatStat" type="TextureRect" parent="AssetManager"]
margin_left = 618.0
margin_right = 738.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 11
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
script = ExtResource( 1 )

[node name="Amount" type="Label" parent="AssetManager/GoatStat"]
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CowStat" type="TextureRect" parent="AssetManager"]
margin_left = 742.0
margin_right = 862.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 11
texture = ExtResource( 23 )
expand = true
stretch_mode = 6
script = ExtResource( 1 )

[node name="Amount" type="Label" parent="AssetManager/CowStat"]
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextYearButton" type="Button" parent="AssetManager"]
margin_left = 866.0
margin_right = 1034.0
margin_bottom = 90.0
text = "next year"
script = ExtResource( 34 )
field_path = NodePath("../../Field")
animals_path = NodePath("../../Animals")
asset_manager_path = NodePath("..")

[node name="ToggleButtonContainer" type="VBoxContainer" parent="."]
anchor_left = 0.85
anchor_top = 0.1
anchor_right = 1.02
anchor_bottom = 0.8
theme = ExtResource( 32 )
custom_constants/separation = 10
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}
tooltip_path = NodePath("../Tooltips/Tooltip")
target_path = NodePath("../StateController")

[node name="CropsToggleButton" parent="ToggleButtonContainer" instance=ExtResource( 29 )]
margin_right = 174.0
margin_bottom = 76.0
icon = ExtResource( 30 )
title = "Crops"

[node name="AnimalsToggleButton" parent="ToggleButtonContainer" instance=ExtResource( 29 )]
margin_top = 86.0
margin_right = 174.0
margin_bottom = 162.0
icon = ExtResource( 23 )
title = "Livestock"
target = "LivestockMenu"

[node name="LabourToggleButton" parent="ToggleButtonContainer" instance=ExtResource( 29 )]
margin_top = 172.0
margin_right = 174.0
margin_bottom = 248.0
icon = ExtResource( 5 )
title = "Labour"

[node name="MeasuresToggleButton" parent="ToggleButtonContainer" instance=ExtResource( 29 )]
margin_top = 258.0
margin_right = 174.0
margin_bottom = 334.0
icon = ExtResource( 9 )
title = "Measures"

[node name="FamilyToggleButton" parent="ToggleButtonContainer" instance=ExtResource( 29 )]
margin_top = 344.0
margin_right = 174.0
margin_bottom = 420.0
icon = ExtResource( 22 )
title = "Family"

[node name="Tooltips" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" type="PanelContainer" parent="Tooltips"]
visible = false
margin_right = 386.0
margin_bottom = 28.0
mouse_filter = 2
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextContainer" type="VBoxContainer" parent="Tooltips/Tooltip"]
margin_right = 386.0
margin_bottom = 28.0
mouse_filter = 2

[node name="Text" type="Label" parent="Tooltips/Tooltip/TextContainer"]
margin_right = 386.0
margin_bottom = 28.0
size_flags_vertical = 3
text = "some text that is very long"
script = ExtResource( 35 )

[node name="BuyMenuTooltip" type="PanelContainer" parent="Tooltips"]
visible = false
margin_right = 14.0
margin_bottom = 28.0
mouse_filter = 2
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}
give_me_a_better_name = false

[node name="TextContainer" type="VBoxContainer" parent="Tooltips/BuyMenuTooltip"]
margin_right = 14.0
margin_bottom = 28.0
mouse_filter = 2

[node name="Text" type="Label" parent="Tooltips/BuyMenuTooltip/TextContainer"]
margin_right = 14.0
margin_bottom = 28.0
size_flags_vertical = 3
script = ExtResource( 35 )
max_width = 100.0

[node name="BigMenuTooltip" type="PanelContainer" parent="Tooltips"]
visible = false
margin_right = 14.0
margin_bottom = 28.0
mouse_filter = 2
script = ExtResource( 37 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextContainer" type="VBoxContainer" parent="Tooltips/BigMenuTooltip"]
margin_right = 14.0
margin_bottom = 28.0
mouse_filter = 2

[node name="Text" type="Label" parent="Tooltips/BigMenuTooltip/TextContainer"]
margin_right = 14.0
margin_bottom = 28.0
size_flags_vertical = 3
script = ExtResource( 35 )
max_width = 100.0

[node name="PopupInsufficient" type="Panel" parent="Tooltips"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
label_path = NodePath("Panel/Label")

[node name="Panel" type="Panel" parent="Tooltips/PopupInsufficient"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tooltips/PopupInsufficient/Panel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.4
text = "You don't have enough money"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Tooltips/PopupInsufficient/Panel"]
anchor_top = 0.4
anchor_right = 0.3
anchor_bottom = 1.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="Tooltips/PopupInsufficient/Panel"]
anchor_left = 0.45
anchor_top = 0.55
anchor_right = 0.8
anchor_bottom = 0.75
text = "Continue"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PopupMaxReached" type="Panel" parent="Tooltips"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Tooltips/PopupMaxReached"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tooltips/PopupMaxReached/Panel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.4
text = "You don't have enough money"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Tooltips/PopupMaxReached/Panel"]
anchor_top = 0.4
anchor_right = 0.3
anchor_bottom = 1.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="Tooltips/PopupMaxReached/Panel"]
anchor_left = 0.45
anchor_top = 0.55
anchor_right = 0.8
anchor_bottom = 0.75
text = "Continue"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="StateController/CropsMenu/CropsBuyMenu/BackButton" to="ToggleButtonContainer" method="deselect"]
[connection signal="pressed" from="StateController/LivestockMenu/BackButton" to="ToggleButtonContainer" method="deselect"]
[connection signal="pressed" from="StateController/LabourMenu/BackButton" to="ToggleButtonContainer" method="deselect"]
[connection signal="pressed" from="StateController/MeasuresMenu/BuyMenu/BackButton" to="ToggleButtonContainer" method="deselect"]
[connection signal="pressed" from="StateController/FamilyMenu/BackButton" to="ToggleButtonContainer" method="deselect"]
[connection signal="pressed" from="AssetManager/NextYearButton" to="AssetManager/NextYearButton" method="_on_NextYearButton_pressed"]
[connection signal="resized" from="Tooltips/Tooltip/TextContainer" to="Tooltips/Tooltip" method="_on_TextContainer_resized"]
[connection signal="resized" from="Tooltips/BuyMenuTooltip/TextContainer" to="Tooltips/BuyMenuTooltip" method="_on_TextContainer_resized"]
[connection signal="resized" from="Tooltips/BigMenuTooltip/TextContainer" to="Tooltips/BigMenuTooltip" method="_on_TextContainer_resized"]
[connection signal="pressed" from="Tooltips/PopupInsufficient/Panel/Button" to="Tooltips/PopupInsufficient" method="hide"]
[connection signal="pressed" from="Tooltips/PopupMaxReached/Panel/Button" to="Tooltips/PopupMaxReached" method="hide"]
